--- a/templates/header.html
+++ b/templates/header.html
@@ -18,7 +18,7 @@
                 </a>
                 <a class="navbar-brand" href="" ng-click="go_connectgroup()" ng-if="auth.Role[0].id === 2">
                     <i class="material-icons">cast_connected</i>
-                    <h4 class="title" style="display:inline-block; vertical-align: text-top;">Kết Nối Groups Telesale</h4>
+                    <h4 class="title" style="display:inline-block; vertical-align: text-top; color: #fff">Kết Nối Groups Telesale</h4>
                 </a>
                 <a class="navbar-brand" href="" ng-click="Time_dupicate()" ng-if="auth.Role[0].id === 0">
                     <i class="material-icons">access_time</i>
