--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,10 @@
   width: 200px;
   text-align: center;
 }
-
+.name{
+	width: 30% !important; 
+	margin-right: 10px;
+}
 .spinner > div {
   width: 18px;
   height: 18px;
@@ -141,6 +144,10 @@
     margin: 0 auto;
 }
 
+.bottom-10{
+	margin-bottom: 10px !important;
+}
+
 .top-10 {
     margin-top: 10px !important;
 }
@@ -188,7 +195,7 @@
 }
 
 .padlr-14 {
-    padding: 10px 21px !important;
+    padding: 10px 18px !important;
 }
 
 .chartcard {
