--- a/partials/unreg.html
+++ b/partials/unreg.html
@@ -24,11 +24,52 @@
                                                     </div>
                                                 </div>
                                             </div>
+											<div class="collapse" id="collapseExample">
+													<div class="card card-body" style="margin-top: -15px;">
+														<div class="row">
+															<div class="col-lg-4">
+															   <div class="input-group add">
+																	<label for="musername">Tên</label>
+																	<input id="proname" type="text" class="form-control" placeholder="2ichi" ng-model="proName">
+															   </div>
+															</div>
+															<div class="col-lg-4">
+															   <div class="input-group add">
+																	<label for="musername">Địa chỉ</label>
+																	<select class="form-control" ng-model="proAddress" ng-options="option.name for option in Address">
+																	</select>
+																	</div>
+															</div>
+															<div class="col-lg-4">
+															   <div class="input-group add">
+																	<label for="musername">Cơ sở</label>
+																	<select class="form-control" ng-model="proCenter" ng-options="option.Name for option in Center">
+																	</select>
+															   </div>
+															</div>
+															<div class="col-lg-6">
+															   <div class="input-group add">
+																	<label for="musername">Nhân viên</label>
+																	<select class="form-control" ng-model="proSale"
+																		ng-options="option.name for option in Users">
+																	</select>
+															   </div>
+															</div>
+															 <div class="col-lg-6">
+																<div class="input-group add">
+																	<a href="" class="btn btn-primary btn-block" ng-click="proSearch()">
+																		<i class="material-icons">search</i> Tìm Kiếm
+																	</a>
+																</div>
+															</div>
+														</div>
+													</div>
+												</div>
 
                                         </div>
                                         <div class="col-lg-4">
                                             <div class="input-group add">
-                                                <div class="row">
+                                                <div class="row bottom-10">
                                                     <div class="col-lg-6">
                                                         <a href="#" class="btn sas-bk btn-block" style="margin-left: 20px"
                                                             ng-click="Searchwith()">
@@ -40,6 +81,11 @@
                                                             <i class="material-icons">clear_all</i> Clear
                                                         </a>
                                                     </div>
+													<div class="col-lg-12">
+														<a href="#" data-toggle="collapse" data-target="#collapseExample" class="btn btn-info btn-block" style="margin-left: 20px; width: 94%;">
+															<i class="material-icons">zoom_in</i> Tìm Kiếm Nâng Cao
+														</a>
+													</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -63,7 +109,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr ng-repeat="content in list_student" style="cursor:pointer" ng-click="detail(content._id)">
+                                    <tr ng-repeat="content in list_student" style="cursor:pointer" ng-click="detail(content._id); checkDuplicator(_details, 1)">
                                         <td class="text-center">{{$index +1}}</td>
                                         <td>{{content.Regday +' '+ content.Regtime}}</td>
                                         <td>{{content._id}}</td>
@@ -96,8 +142,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title text-center" style="font-family:'Times New Roman', Times, serif; font-weight: 900">Thông
-                    Tin Chi Tiết Học Viên {{_details._id}} <span class="badge  badge-danger" ng-if="_details.Duplicate !== null">Học
-                        Viên bị trùng và đã được đăng ký vào {{_details.Duplicate[0].pretime}}</span></h4>
+                    Tin Chi Tiết Học Viên {{_details._id}}</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -108,13 +153,14 @@
                         <div class="card-body card-add">
                             <form name="loginform">
                                 <div class="row">
-                                    <div class="col-lg-2 p-0">
+                                    <div class="col-lg-3 p-0">
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <div class="input-group-prepend add">
                                                     <label for="fullname">Họ tên</label>
                                                 </div>
-                                                <input type="text" class="form-control" ng-model="_details.Fullname" id="dname">
+                                                <input type="text" class="form-control name" ng-model="_details.Fullname" id="dname">
+												<input type="text" class="form-control" ng-model="_details.Fistname" id="dfname">
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -128,7 +174,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="phone">Số DT</label>
-                                                <input type="text" class="form-control" ng-model="_details.Phone" id="dphone">
+                                                <input type="text" class="form-control" ng-keyup="checkDuplicator(_details, 2)" ng-model="_details.Phone" id="dphone">
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">
                                                         <a href="" ng-click="openPhoneTab(_details.Phone)">
@@ -161,7 +207,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-3">
                                         <div class="form-group">
                                             <label for="note">Ghi chú</label>
                                             <textarea class="form-control" rows="5" ng-keyup="check_length_note()" ng-model="_details.Note" id="dnote"></textarea>
@@ -270,10 +316,10 @@
                         data-toggle="modal" data-target="#time">Gọi lại thời gian</button>
                 </div>
                 <div class="col-4">
-                    <button type="button" class="btn btn-block btn-lg btn-warning" ng-show="auth.Role[0].id !== 0" ng-disabled="auth.Username !== _details.Manager[0].id  || _details.Status_student[0].id === 3 || auth.Access[0].goilaisau === false"
+                    <button type="button" class="btn btn-block btn-lg btn-warning" ng-show="auth.Role[0].id !== 0" ng-disabled="auth.Username !== _details.Manager[0].id  || auth.Access[0].goilaisau === false || _details.Status_student[0].id !== 0 || (_details.Center !== null && _details.Center[0].Id !== null) || selectedCenter.Id !== null || (selectedStatus.value !== null && selectedStatus.value !== 0)"
                         ng-click="recall()">Gọi lại sau</button>
                         <button type="button" class="btn btn-block btn-lg btn-warning" ng-show="auth.Role[0].id === 0"
-                        ng-click="recall()">Gọi lại sau</button>
+                        ng-click="recall()" ng-disabled="_details.Status_student[0].id !== 0 || (_details.Center !== null && _details.Center[0].Id !== null) || selectedCenter.Id !== null || (selectedStatus.value !== null && selectedStatus.value !== 0)">Gọi lại sau</button>
                 </div>
             </div>
         </div>
@@ -385,15 +431,15 @@
                                                 <div class="input-group-prepend add">
                                                     <label for="fullname">Họ tên</label>
                                                 </div>
-                                                <input type="text" class="form-control" ng-model="data.fullname" id="name2"
+                                                <input type="text" class="form-control name" ng-model="data.fullname" id="name2"
                                                     required>
+												<input type="text" class="form-control" ng-model="data.fistname" id="fname2">
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="email">Email</label>
-                                                <input type="text" class="form-control" ng-model="data.email" id="email2"
-                                                    required>
+                                                <input type="text" class="form-control" ng-model="data.email" id="email2">
                                             </div>
                                         </div>
                                     </div>
@@ -428,13 +474,13 @@
                                                 </select>
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <div class="input-group add">
-                                                <label for="dayreg">Ngày đăng ký</label>
-                                                <input type="date" class="form-control datetimepicker" id="adddayreg"
-                                                    required>
-                                            </div>
-                                        </div>
+                                        <!-- <div class="form-group"> -->
+                                            <!-- <div class="input-group add"> -->
+                                                <!-- <label for="dayreg">Ngày đăng ký</label> -->
+                                                <!-- <input type="date" class="form-control datetimepicker" id="adddayreg" -->
+                                                    <!-- required> -->
+                                            <!-- </div> -->
+                                        <!-- </div> -->
                                     </div>
                                     <div class="col-lg-1 p-0">
                                         <div class="form-group">
@@ -587,6 +633,103 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Chi Tiết Học Viên trùng-->
+<div class="modal fade" id="duplicator" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-add" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title text-center" style="font-family:'Times New Roman', Times, serif; font-weight: 900">
+                    Danh Sách Chi Tiết Các Học Viên Trùng</h4>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" style="padding-top: 5px">
+				<table class="table">
+					<thead>
+						<tr>
+							<th class="text-center">#</th>
+							<th>Time</th>
+							<th>ID</th>
+							<th>Họ tên</th>
+							<th>SĐT</th>
+							<th>Ghi chú</th>
+							<th>Telesale</th>
+							<th>Trạng thái</th>
+							<th>Chuyển</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="content in Duplicator">
+							<td class="text-center">{{$index + 1}}</td>
+							<td>{{content.Regtime}} {{content.Regday}}</td>
+							<td ng-bind="content._id"></td>
+							<td>{{content.Fullname}} {{content.Fistname}}</td>
+							<td>{{content.Phone}}</td>
+							<td>{{content.Note}}</td>
+							<td>{{content.Manager[0].id}}</td>
+							<td>{{content.Status_student[0].name}}</td>
+							<td>
+								<button type="button" rel="tooltip" class="btn btn-info sas-bk" ng-click="sendStudent(_details)">
+									<i class="material-icons">send</i>
+								</button>
+							</td>
+						</tr>
+						
+					</tbody>
+				</table>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Chi Tiết Học Viên trùng khi thêm-->
+<div class="modal fade" id="addduplicator" tabindex="-1" role="dialog" data-backdrop="false" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-add" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title text-center" style="font-family:'Times New Roman', Times, serif; font-weight: 900">
+                    Danh Sách Chi Tiết Các Học Viên Trùng</h4>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" style="padding-top: 5px">
+				<table class="table">
+					<thead>
+						<tr>
+							<th class="text-center">#</th>
+							<th>Time</th>
+							<th>ID</th>
+							<th>Họ tên</th>
+							<th>SĐT</th>
+							<th>Ghi chú</th>
+							<th>Telesale</th>
+							<th>Trạng thái</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="content in Duplicator">
+							<td class="text-center">{{$index + 1}}</td>
+							<td>{{content.Regtime}} {{content.Regday}}</td>
+							<td ng-bind="content._id"></td>
+							<td>{{content.Fullname}} {{content.Fistname}}</td>
+							<td>{{content.Phone}}</td>
+							<td>{{content.Note}}</td>
+							<td>{{content.Manager[0].id}}</td>
+							<td>{{content.Status_student[0].name}}</td>
+						</tr>						
+					</tbody>
+				</table>
             </div>
         </div>
     </div>
