--- a/partials/home.html
+++ b/partials/home.html
@@ -159,7 +159,7 @@
                                         <td class="text-center">{{$index +1}}</td>
                                         <td>{{content.Regday +' '+ content.Regtime}}</td>
                                         <td>{{content._id}}</td>
-                                        <td>{{content.Fullname}}</td>
+                                        <td>{{content.Fistname}} {{content.Lastname}}</td>
                                         <td>{{content.Sex[0].name}}</td>
                                         <td>{{content.Phone}}</td>
                                         <td>{{content.Address[0].name}}</td>
@@ -201,12 +201,13 @@
                                 <div class="row">
                                     <div class="col-lg-3 p-0">
                                         <div class="form-group">
-                                            <div class="input-group">
+                                            <div class="input-group" style="margin-bottom: 37px">
                                                 <div class="input-group-prepend add">
-                                                    <label for="dfname">Họ tên</label>
+                                                    <!-- <label for="dfname">Họ tên</label> -->
                                                 </div>
 												<input type="text" class="form-control name" ng-model="_details.Fullname" id="dname">
-                                                <input type="text" class="form-control" ng-model="_details.Fistname" id="dfname">
+                                                <input type="text" class="form-control fname" ng-model="_details.Fistname" id="dfname">
+												<input type="text" class="form-control lname" ng-model="_details.Lastname" id="dlname">
 												<!-- <div class="input-group-prepend add"> -->
                                                     <!-- <label for="dname">Tên</label> -->
                                                 <!-- </div> -->
@@ -459,14 +460,15 @@
                         <div class="card-body card-add">
                             <form name="loginform">
                                 <div class="row">
-                                    <div class="col-lg-3 p-0">
+                                    <div class="col-lg-4 p-0">
                                         <div class="form-group">
-                                            <div class="input-group">
+                                            <div class="input-group" style="margin-bottom: 37px;">
 												<div class="input-group-prepend add">
-                                                    <label for="fname">Họ tên</label>
+                                                    <!-- <label for="fname">Họ tên</label> -->
                                                 </div>
-												<input type="text" class="form-control name" ng-model="data.fullname" id="name">
-                                                <input type="text" class="form-control" ng-model="data.fistname" id="fname">
+												<input type="text" class="form-control name" placeholder="Full Name" ng-model="data.fullname" id="name">
+                                                <input type="text" class="form-control fname" placeholder="First Name" ng-model="data.fistname" id="fname">
+												<input type="text" class="form-control lname" placeholder="Last Name" ng-model="data.lastname" id="lname">
 													
                                                 <!-- <div class="input-group-prepend add"> -->
                                                     <!-- <label for="name">Tên</label> -->
@@ -482,7 +484,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-3">
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="phone">Số DT</label>
@@ -608,15 +610,16 @@
                         <div class="card-body card-add">
                             <form name="loginform">
                                 <div class="row">
-                                    <div class="col-lg-3 p-0">
+                                    <div class="col-lg-4 p-0">
                                         <div class="form-group">
-                                            <div class="input-group">
+                                            <div class="input-group" style="margin-bottom: 37px">
                                                 <div class="input-group-prepend add">
-                                                    <label for="fullname">Họ tên</label>
+                                                    <!-- <label for="fullname">Họ tên</label> -->
                                                 </div>
-                                                <input type="text" class="form-control name" ng-model="data.fullname" id="name2"
+                                                <input type="text" class="form-control name" placeholder="Full Name" ng-model="data.fullname" id="name2"
                                                     required>
-												<input type="text" class="form-control" ng-model="data.fistname" id="fname2">
+												<input type="text" class="form-control fname" placeholder="First Name" ng-model="data.fistname" id="fname2">
+												<input type="text" class="form-control lname" placeholder="Last Name" ng-model="data.lastname" id="lname2">
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -626,7 +629,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-3">
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="phone">Số DT</label>
@@ -1062,14 +1065,3 @@
         </div>
     </div>
 </div>
-
-<!-- <script> -->
-	<!-- var table = $('#hometb').DataTable(); -->
- 
-	<!-- regExSearch = '^\\s' + myValue +'\\s*$'; -->
-	<!-- table.column(columnNo).search(regExSearch, true, false).draw(); -->
-<!-- </script> -->
-
-<!-- <script> -->
-        <!-- document.getElementById("proname").style.textTransform = "capitalize"; -->
-    <!-- </script> -->
