--- a/partials/notcalled.html
+++ b/partials/notcalled.html
@@ -102,7 +102,8 @@
                                         <th>STT</th>
                                         <th>Time</th>
                                         <th>ID</th>
-                                        <th>Họ Tên</th>
+                                        <th>Họ</th>
+										<th>Tên</th>
                                         <th>Giới tính</th>
                                         <th>Số điện thoại</th>
                                         <th>Ghi chú</th>
@@ -116,7 +117,8 @@
                                         <td class="text-center">{{$index +1}}</td>
                                         <td>{{content.Regday +' '+ content.Regtime}}</td>
                                         <td>{{content._id}}</td>
-                                        <td>{{content.Fistname}} {{content.Lastname}}</td>
+                                        <td>{{content.Fistname}}</td>
+										<td>{{content.Lastname}}</td>
                                         <td>{{content.Sex[0].name}}</td>
                                         <td>{{content.Phone}}</td>
                                         <td>{{content.Note}}</td>
