--- a/partials/calendar.html
+++ b/partials/calendar.html
@@ -14,13 +14,13 @@
                                                 <div class="col-lg-4">
                                                     <div class="input-group add">
                                                         <label for="Cday">Từ Ngày</label>
-                                                        <input type="date" class="form-control" id="Cday">
+                                                        <input type="text" class="form-control" id="Cday">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-4">
                                                     <div class="input-group add">
                                                         <label for="Cday">Đến Ngày</label>
-                                                        <input type="date" class="form-control" id="Cday2">
+                                                        <input type="text" class="form-control" id="Cday2">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-4">
@@ -759,3 +759,24 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(function () {
+        var d = new Date();
+        var currMonth = d.getMonth();
+        var currYear = d.getFullYear();
+        var startDate = new Date(currYear, currMonth, 1);
+
+        $("#Cday").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", startDate);
+
+        $("#Cday2").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", new Date());
+    });
+</script>
