--- a/partials/notcalled.html
+++ b/partials/notcalled.html
@@ -14,13 +14,13 @@
                                                 <div class="col-lg-6">
                                                     <div class="input-group add">
                                                         <label for="nregday">Từ Ngày</label>
-                                                        <input type="date" class="form-control" id="nregday">
+                                                        <input type="text" class="form-control" id="nregday">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6">
                                                     <div class="input-group add">
                                                         <label for="nregday">Đến Ngày</label>
-                                                        <input type="date" class="form-control" id="nregday2">
+                                                        <input type="text" class="form-control" id="nregday2">
                                                     </div>
                                                 </div>
                                             </div>
@@ -747,3 +747,24 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(function () {
+        var d = new Date();
+        var currMonth = d.getMonth();
+        var currYear = d.getFullYear();
+        var startDate = new Date(currYear, currMonth, 1);
+
+        $("#nregday").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", startDate);
+
+        $("#nregday2").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", new Date());
+    });
+</script>
