--- a/partials/recall.html
+++ b/partials/recall.html
@@ -14,13 +14,13 @@
                                                 <div class="col-lg-6">
                                                     <div class="input-group add">
                                                         <label for="Reday">Từ Ngày</label>
-                                                        <input type="date" class="form-control" id="Reday">
+                                                        <input type="text" class="form-control" id="Reday">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6">
                                                     <div class="input-group add">
                                                         <label for="Reday2">Đến Ngày</label>
-                                                        <input type="date" class="form-control" id="Reday2">
+                                                        <input type="text" class="form-control" id="Reday2">
                                                     </div>
                                                 </div>
                                             </div>
@@ -762,3 +762,24 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(function () {
+        var d = new Date();
+        var currMonth = d.getMonth();
+        var currYear = d.getFullYear();
+        var startDate = new Date(currYear, currMonth, 1);
+
+        $("#Reday").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", startDate);
+
+        $("#Reday2").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", new Date());
+    });
+</script>
