--- a/partials/unreg.html
+++ b/partials/unreg.html
@@ -14,13 +14,13 @@
                                                 <div class="col-lg-6">
                                                     <div class="input-group add">
                                                         <label for="Uregday">Từ Ngày</label>
-                                                        <input type="date" class="form-control" id="Uregday">
+                                                        <input type="text" class="form-control" id="Uregday">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6">
                                                     <div class="input-group add">
                                                         <label for="Uregday2">Đến Ngày</label>
-                                                        <input type="date" class="form-control" id="Uregday2">
+                                                        <input type="text" class="form-control" id="Uregday2">
                                                     </div>
                                                 </div>
                                             </div>
@@ -740,3 +740,24 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(function () {
+        var d = new Date();
+        var currMonth = d.getMonth();
+        var currYear = d.getFullYear();
+        var startDate = new Date(currYear, currMonth, 1);
+
+        $("#Uregday").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", startDate);
+
+        $("#Uregday2").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", new Date());
+    });
+</script>
