--- a/partials/scenter.html
+++ b/partials/scenter.html
@@ -14,13 +14,13 @@
                                                 <div class="col-lg-3" style="padding-left: 5px">
                                                     <div class="input-group add">
                                                         <label for="scday">Từ Ngày</label>
-                                                        <input type="date" class="form-control" id="scday">
+                                                        <input type="text" class="form-control" id="scday">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3" style="padding-left: 5px">
                                                     <div class="input-group add">
                                                         <label for="scday">Đến Ngày</label>
-                                                        <input type="date" class="form-control" id="scday2">
+                                                        <input type="text" class="form-control" id="scday2">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3">
@@ -88,3 +88,24 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(function () {
+        var d = new Date();
+        var currMonth = d.getMonth();
+        var currYear = d.getFullYear();
+        var startDate = new Date(currYear, currMonth, 1);
+
+        $("#scday").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", startDate);
+
+        $("#scday2").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", new Date());
+    });
+</script>
