--- a/partials/srating.html
+++ b/partials/srating.html
@@ -14,13 +14,13 @@
                                                 <div class="col-lg-6">
                                                     <div class="input-group add">
                                                         <label for="sday">Từ Ngày</label>
-                                                        <input type="date" class="form-control" id="sday">
+                                                        <input type="text" class="form-control" id="sday">
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6">
                                                     <div class="input-group add">
                                                         <label for="sday2">Đến Ngày</label>
-                                                        <input type="date" class="form-control" id="sday2">
+                                                        <input type="text" class="form-control" id="sday2">
                                                     </div>
                                                 </div>
                                             </div>
@@ -39,7 +39,7 @@
                                 </div>
                             </div>
 
-                            <table datatable="ng" dt-options="newdtOptions" cellpadding="0" class="table table-striped cell-border table-hover text-center">
+                            <table ng-if="isLoading" datatable="ng" dt-options="newdtOptions" cellpadding="0" class="table table-striped cell-border table-hover text-center">
                                 <thead>
                                     <tr>
                                         <th>Stt</th>
@@ -76,3 +76,24 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(function () {
+        var d = new Date();
+        var currMonth = d.getMonth();
+        var currYear = d.getFullYear();
+        var startDate = new Date(currYear, currMonth, 1);
+
+        $("#sday").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", startDate);
+
+        $("#sday2").datepicker({
+            changeYear: true,
+            changeMonth: true,
+            dateFormat: "dd/mm/yy"
+        }).datepicker("setDate", new Date());
+    });
+</script>
